# troopers24-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  backtrace.py  burn_id.sh  burn_id_manual.sh  esp-idf-export.sh  package.sh  partitions.csv  sdkconfig
.github/workflows/: cd-release.yml  ci-build.yml
components/driver_sndmixer/: CMakeLists.txt  driver_i2s.c  driver_i2s.h  snd_source_mp3.c  snd_source_synth.c  snd_source_wav.c  sndmixer.c  sndmixer.h
components/gui-toolkit/: CMakeLists.txt  graphics_wrapper.c  menu.c
components/gui-toolkit/include/: graphics_wrapper.h
components/i2c-pca9555/: CMakeLists.txt  pca9555.c
components/i2c-pca9555/include/: pca9555.h
components/keyboard/: CMakeLists.txt  README.md  keyboard.c
components/keyboard/include/: keyboard.h
components/physical-keyboard/: CMakeLists.txt  physical_keyboard.c  physical_keyboard.h
components/qrcode/: CMakeLists.txt  LICENSE  README.md  qrcodegen.c
components/qrcode/include/: qrcodegen.h
components/spi-cc1200/: CMakeLists.txt  cc1200-802154g-863-870-fsk-50kbps.c  cc1200-868-fsk-1-2kbps.c  cc1200.c  cc1200_hal.c  cc1200_spi.c  cc1200_statemachine.c  troopers.c
components/spi-cc1200/include/: cc1200-arch.h  cc1200-conf.h  cc1200-const.h  cc1200-rf-cfg.h  cc1200_troopers.h  contiki.h  driver_cc1200.h  driver_cc1200_misc.h  driver_cc1200_spi.h  driver_cc1200_statemachine.h  types.h
components/spi-cc1200/sdr/: c1200_tx.grc  cc1200_tx.grc  send.py  troopers.py  troopers_contdown.py
components/spi-st25r3911b/: CMakeLists.txt  README.md  st25r3911b.c
components/spi-st25r3911b/NDEF/: .gitattributes
components/spi-st25r3911b/NDEF/doc/: ndef.chm
components/spi-st25r3911b/NDEF/include/: ndef_config.h
components/spi-st25r3911b/NDEF/include/message/: ndef_buffer.h  ndef_message.h  ndef_record.h  ndef_type_aar.h  ndef_type_bluetooth.h  ndef_type_deviceinfo.h  ndef_type_empty.h  ndef_type_flat.h  ndef_type_media.h  ndef_type_text.h  ndef_type_tnep.h  ndef_type_uri.h  ndef_type_vcard.h  ndef_type_wifi.h  ndef_type_wlc.h  ndef_type_wpcwlc.h  ndef_types.h
components/spi-st25r3911b/NDEF/include/poller/: ndef_poller.h  ndef_t2t.h  ndef_t3t.h  ndef_t4t.h  ndef_t5t.h  ndef_t5t_hal.h
components/spi-st25r3911b/NDEF/source/message/: ndef_message.c  ndef_record.c  ndef_type_aar.c  ndef_type_bluetooth.c  ndef_type_deviceinfo.c  ndef_type_empty.c  ndef_type_flat.c  ndef_type_media.c  ndef_type_text.c  ndef_type_tnep.c  ndef_type_uri.c  ndef_type_vcard.c  ndef_type_wifi.c  ndef_type_wlc.c  ndef_type_wpcwlc.c  ndef_types.c
components/spi-st25r3911b/NDEF/source/poller/: ndef_poller.c  ndef_poller_message.c  ndef_poller_rf.c  ndef_t2t.c  ndef_t3t.c  ndef_t4t.c  ndef_t5t.c  ndef_t5t_rf.c
components/spi-st25r3911b/en.STSW-ST25RFAL001/: LICENCE  rfal_platform.h
components/spi-st25r3911b/en.STSW-ST25RFAL001/include/: rfal_analogConfig.h  rfal_chip.h  rfal_defConfig.h  rfal_dpo.h  rfal_isoDep.h  rfal_nfc.h  rfal_nfcDep.h  rfal_nfca.h  rfal_nfcb.h  rfal_nfcf.h  rfal_nfcv.h  rfal_rf.h  rfal_st25tb.h  rfal_st25xv.h  rfal_t1t.h  rfal_t2t.h  rfal_t4t.h
components/spi-st25r3911b/en.STSW-ST25RFAL001/source/: rfal_analogConfig.c  rfal_cd.c  rfal_crc.h  rfal_dpo.c  rfal_iso15693_2.c  rfal_iso15693_2.h  rfal_isoDep.c  rfal_nfc.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c  rfal_st25xv.c  rfal_t1t.c  rfal_t2t.c  rfal_t4t.c
components/spi-st25r3911b/en.STSW-ST25RFAL001/source/st25r3911/: rfal_analogConfigTbl.h  rfal_dpoTbl.h  rfal_features.h  rfal_rfst25r3911.c  st25r3911.c  st25r3911.h  st25r3911_com.c  st25r3911_com.h  st25r3911_interrupt.c  st25r3911_interrupt.h
components/spi-st25r3911b/include/: st25r3911b.h  st25r3911b_global.h
components/spi-st25r3911b/st25common/: st_errno.h  utils.h
components/spi-st77xx/: CMakeLists.txt  LICENSE  README.md  st77xx.c
components/spi-st77xx/include/: st77xx.h
main/: CMakeLists.txt  app_management.c  app_update.c  appfs_wrapper.c  audio.c  bootscreen.c  button_test.c  factory_test.c  file_browser.c  filesystems.c  http_download.c  main.c  nametag.c  ntp_helper.c  ntp_helper.h  system_wrapper.c  test_common.c  wifi_defaults.c  wifi_ota.c
main/include/: audio.h  bootscreen.h  factory_test.h  http_download.h  test_common.h  wifi_defaults.h
main/menus/: agenda.c  agenda.h  contacts.c  contacts.h  dev.c  hatchery.c  id.c  id.h  ir.c  launcher.c  nfcreader.c  nfcreader.h  sao.c  settings.c  start.c  start.h  utils.c  utils.h  wifi.c
resources/: boot.pcm
