idf_component_register(
  SRCS
        "st25r3911b.c"
        "en.STSW-ST25RFAL001/source/rfal_nfc.c"
        "en.STSW-ST25RFAL001/source/rfal_analogConfig.c"
        "en.STSW-ST25RFAL001/source/rfal_cd.c"
        "en.STSW-ST25RFAL001/source/rfal_crc.c"
        "en.STSW-ST25RFAL001/source/rfal_crc.h"
        "en.STSW-ST25RFAL001/source/rfal_dpo.c"
        "en.STSW-ST25RFAL001/source/rfal_iso15693_2.c"
        "en.STSW-ST25RFAL001/source/rfal_iso15693_2.h"
        "en.STSW-ST25RFAL001/source/rfal_isoDep.c"
        "en.STSW-ST25RFAL001/source/rfal_nfca.c"
        "en.STSW-ST25RFAL001/source/rfal_nfcb.c"
        "en.STSW-ST25RFAL001/source/rfal_nfcDep.c"
        "en.STSW-ST25RFAL001/source/rfal_nfcf.c"
        "en.STSW-ST25RFAL001/source/rfal_nfcv.c"
        "en.STSW-ST25RFAL001/source/rfal_st25tb.c"
        "en.STSW-ST25RFAL001/source/rfal_st25xv.c"
        "en.STSW-ST25RFAL001/source/rfal_t1t.c"
        "en.STSW-ST25RFAL001/source/rfal_t2t.c"
        "en.STSW-ST25RFAL001/source/rfal_t4t.c"
        "en.STSW-ST25RFAL001/source/st25r3911/rfal_rfst25r3911.c"
        "en.STSW-ST25RFAL001/source/st25r3911/st25r3911.c"
        "en.STSW-ST25RFAL001/source/st25r3911/st25r3911_com.c"
        "en.STSW-ST25RFAL001/source/st25r3911/st25r3911_interrupt.c"
  INCLUDE_DIRS
        "include"
        "en.STSW-ST25RFAL001/include"
        "en.STSW-ST25RFAL001/source/st25r3911"
        "en.STSW-ST25RFAL001"
)
